SF-Perkin/force-app/main/default/objects/ProductCategory/fields/B2B_Category_Description__c.field-meta.xml
<CustomField>
    <fullName>B2B_Category_Description__c</fullName>
    <label>B2B Category Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>