SF-Perkin/force-app/main/default/objects/ProductCategory/fields/B2B_Redirect_To_Page__c.field-meta.xml
<CustomField>
    <fullName>B2B_Redirect_To_Page__c</fullName>
    <inlineHelpText>Specify which page should the user be redirected to</inlineHelpText>
    <label>B2B Redirect To Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>